src/containers/home/NotConnectedHome/styles.css
article.segment {
    padding: 0;
}

.large-gap > * {
    margin-bottom: 115px !important;
    margin-top: 115px !important;
}

.key-features__header {
    margin-left: auto;
    margin-right: auto;
    max-width: 650px;
}

h2,
.key-features__header > h2.ui.header {
    font-weight: 250;
}

h1,
h1.ui.header,
h2,
h2.ui.header,
h3,
h3.ui.header {
    font-weight: 200;
}

h2,
h2.ui.header {
    font-size: 34px;
    margin-bottom: 50px;
}

h3,
h3.ui.header {
    font-size: 26px;
    line-height: 26px;
}

h4,
h4.ui.header {
    font-weight: 200;
    font-size: 24px;
}

h5,
h5.ui.header {
    font-weight: 200;
    font-size: 12px;
}

p {
    line-height: 22px;
    font-size: 16px;
    font-weight: 300;
}

.ui.header + p.loans {
    margin-top: 20px;
}

.grid .home-image img {
    max-height: 120px;
    min-height: 120px;
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
    p.opac {
        opacity: 0.6;
    }
}

.list-item {
    padding-left: 30px;
    background: url("../../../assets/images/bullet-point.svg") no-repeat left 6px;
    margin: 0 40px;
}

.segment.how-to-use {
    position: relative;
    padding-top: 200px;
    padding-bottom: 200px;
    background: linear-gradient(
        rgba(53, 0, 55, 0) 0%,
        rgba(53, 0, 55, 1) 20%,
        rgba(53, 0, 55, 1) 80%,
        rgba(53, 0, 55, 0) 100%
    );
}

.grid .column {
    padding: 1rem;
}

.team .grid .column > img,
.partner .grid .column > img {
    background-color: #fff;
    border-radius: 500rem;
    filter: grayscale(100%);
    float: left;
    width: 120px;
    height: 120px;
    margin-bottom: 70px;
    margin-right: 30px;
}

.team .grid .column h3 {
    margin: 0;
}

.team .grid .column h5 a.social {
    height: 20px;
    line-height: 20px;
    margin-left: 10px;
}

.team .grid .column p.description,
.partner .grid .column p.description {
    font-size: 14px;
    font-weight: 200;
    letter-spacing: 1.1px;
    margin: 5px 0 0;
}

.partner .grid .column a,
.team .grid .column a {
    color: #fff;
    font-weight: 400;
}

@media (max-width: 767px) and (min-width: 320px) {
    .team .grid .column > img,
    .partner .grid .column > img {
        margin-bottom: 15px;
    }

    .team .grid .column h3 {
        margin-top: 35px;
    }

    .team .grid .column p.description,
    .partner .grid .column p.description {
        margin-top: 25px;
    }
}

@media (min-width: 768px) and (max-width: 1455px) {
    .segment.how-to-use,
    .segment.team {
        padding-left: 190px;
    }
    .segment.team,
    .segment.partner {
        padding-left: 85px;
    }
}

.segment.how-to-use .grid.margin {
    margin-bottom: 100px;
}

.segment.how-to-use h5.ui.header,
.segment.how-to-use h2.ui.header {
    margin: 0;
}

.interchange-icon {
    width: 50px;
}

a.try-now {
    padding: 0 50px;
}

